nav_contents.html 추가했습니다

--- a/gdg_flask/templates/base/layout.html
+++ b/gdg_flask/templates/base/layout.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
 {% block layout %}
-    layout입니다
+    {% include "nav_contents.html" %}
+    {% block article %}
+    {% endblock %}
 {% endblock %}
