1. delete "gunny.html" 2. add footer.html 3. add include footer.html at layout.html

--- a/gdg_flask/templates/base/layout.html
+++ b/gdg_flask/templates/base/layout.html
@@ -3,4 +3,5 @@
     {% include "nav_contents.html" %}
     {% block article %}
     {% endblock %}
+    {% include"base/footer.html" %}
 {% endblock %}
