--- a/gdg_flask/templates/base/footer.html
+++ b/gdg_flask/templates/base/footer.html
@@ -1,5 +1,5 @@
 
 <footer>
-    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p class="pull-right"><a href="home">Back to top</a></p>
     <p>© 2013 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
 </footer>
