--- a/gdg_flask/templates/base/base.html
+++ b/gdg_flask/templates/base/base.html
@@ -16,6 +16,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <link rel="stylesheet" href="{{ url_for('static',filename="css/carousel.css") }}">
+
 
 </head>
 <body>
@@ -26,5 +28,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="{{ url_for('static', filename="js/catcher.js") }}"></script>
+
 </body>
 </html>
