--- a/gdg_flask/templates/base/base.html
+++ b/gdg_flask/templates/base/base.html
@@ -25,8 +25,11 @@
 {% endblock %}
 
 
-<script src="{{ url_for('static', filename="js/catcher.js") }}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ url_for('static', filename="js/bootstrap.js") }}"></script>
+<script src="{{ url_for('static', filename="js/catcher.js") }}"></script>
+
+
 
 </body>
 </html>
