nav 배경색깔 바꾸는 코드 삽입합니다

--- a/gdg_flask/templates/base/base.html
+++ b/gdg_flask/templates/base/base.html
@@ -17,6 +17,7 @@
     <![endif]-->
 
     <link rel="stylesheet" href="{{ url_for('static',filename="css/carousel.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename="css/gdg-nav.css") }}">
 
 
 </head>
