--- a/gdg_flask/templates/nav_contents.html
+++ b/gdg_flask/templates/nav_contents.html
@@ -1,7 +1,7 @@
 <div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar navbar-inverse navbar-static-top gdg-navbar">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">GDG SSU 공식홈페이지</a>
+              <a class="navbar-brand" href="#"><img src="{{ url_for('static',filename="images/GDG-SSU-white.png") }}"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
               <ul class="nav navbar-nav">
