url_for 의 오타잡음

--- a/gdg_flask/templates/base/base.html
+++ b/gdg_flask/templates/base/base.html
@@ -36,9 +36,9 @@
 <script src="{{ url_for('static', filename="js/catcher.js") }}"></script>
 
 <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-<script src="{{ url_for('static', filenmae='js/holder.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/holder.min.js') }}"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ url_for('static',fileanme='js/ie10-viewport-bug-workaround.js') }}"></script>
+<script src="{{ url_for('static',filename='js/ie10-viewport-bug-workaround.js') }}"></script>
 
 
 
