디버그 되게 속성바꿧고, 화면전환의 배경은 색이 아니라 이미지엿습니다

--- a/gdg_flask/templates/home.html
+++ b/gdg_flask/templates/home.html
@@ -13,7 +13,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item">
-                <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+                <img class="first-slide" src="{{ url_for('static',filename="images/GDG-SSU-white.png") }}" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Example headline.</h1>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="item active">
-                <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+                <img class="third-slide" src="{{ url_for('static',filename="images/GDG-SSU-black.png") }}" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>One more for good measure.</h1>
