넘어가는 이미지 배경색 바꾸는 css입니다

--- a/gdg_flask/templates/home.html
+++ b/gdg_flask/templates/home.html
@@ -12,7 +12,7 @@
             <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-            <div class="item">
+            <div class="item gdg-item">
                 <img class="first-slide" src="{{ url_for('static',filename="images/GDG-SSU-white.png") }}" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption">
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
+            <div class="item gdg-item">
                 <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item active">
+            <div class="item gdg-item active">
                 <img class="third-slide" src="{{ url_for('static',filename="images/GDG-SSU-black.png") }}" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
