--- a/gdg_flask/templates/base/base.html
+++ b/gdg_flask/templates/base/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>GDG SSU | GDG 숭실대</title>
     <link rel="stylesheet" href="{{ url_for('static',filename="css/bootstrap.css") }}">
 
     <!-- Latest compiled and minified CSS -->
