--- a/gdg_flask/static/css/carousel.css
+++ b/gdg_flask/static/css/carousel.css
@@ -50,7 +50,7 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
-  background-color: #777;
+  background-color: #4cae4c;
 }
 .carousel-inner > .item > img {
   position: absolute;
