폴더구조 변경하였습니다. 이상 있을시 롤백 부탁

--- a/gdg_flask/templates/gdg-article/home.html
+++ b/gdg_flask/templates/gdg-article/home.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
-        {% include "carousel_contents.html" %}
+        {% include "gdg-article/included/carousel_contents.html" %}
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
