--- a/gdg_flask/templates/gdg-base/layout.html
+++ b/gdg_flask/templates/gdg-base/layout.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% block layout %}
-    {% include "nav_contents.html" %}
+    {% include "gdg-base/nav_contents.html" %}
     {% block article %}
 
 
