파일 구조를 바꾸는 과정에서 매치가 안됫던거 같아요. 다시 정상으로 바꿔놨습니다.

--- a/gdg_flask/templates/gdg-base/layout.html
+++ b/gdg_flask/templates/gdg-base/layout.html
@@ -1,10 +1,10 @@
-{% extends "base/base.html" %}
+{% extends "gdg-base/base.html" %}
 {% block layout %}
-    {% include "gdg-base/nav_contents.html" %}
+    {% include "gdg-article/included/nav_contents.html" %}
     {% block article %}
 
 
     {% endblock %}
 
-    {% include"base/footer.html" %}
+    {% include"gdg-article/included/footer_contents.html" %}
 {% endblock %}
