1.about/ 라우팅, about/ register, about/ login, 및 관련 템플릿 만들었습니다. 2. 그 외 sticky-footer(static/css 등록하였고, footer에 class='footer' 추가했습니다.) 3. static/css/gdg-article.css 만들었습니다. .gdg-article-base-wrap (css)과 .gdg-contents-base-wrap을 만들었습니다.     - 이는 레이아웃을 위한 속성이고, 간단한 css로 작성 하였습니다.
<기타 변경사항은 없습니다.>

--- a/gdg_flask/templates/gdg-base/base.html
+++ b/gdg_flask/templates/gdg-base/base.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="{{ url_for('static',filename="css/carousel.css") }}">
     <link rel="stylesheet" href="{{ url_for('static',filename="css/gdg-nav.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/gdg-article.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sticky-footer.css') }}">
 
 
 
