--- a/gdg_flask/templates/gdg-article/about/intro.html
+++ b/gdg_flask/templates/gdg-article/about/intro.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base/layout.html" %}
+{% block article %}
+    맴버 소개 화면입니다
+{% endblock %}
