--- a/gdg_flask/templates/gdg-article/included/footer_contents.html
+++ b/gdg_flask/templates/gdg-article/included/footer_contents.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <footer>
+    <footer class="footer">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2013 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
