--- a/gdg_flask/templates/gdg-article/account/register.html
+++ b/gdg_flask/templates/gdg-article/account/register.html
@@ -3,7 +3,29 @@
     <article class="gdg-article-base-wrap">
         <div class="gdg-contents-base-wrap">
             <div class="container">
-                dk
+                <div class="form-box">
+                    <form role="form" method="post">
+
+                        <!-- Form header for form title-->
+                        <div class="form-header">
+                            <h4>회원가입</h4>
+                        </div>
+
+                        <div role="separator" class="divider"></div>
+
+                        <div class="form-content">
+                            <!--csrf token-->
+                            {{ form.hidden_tag() }}
+
+                            {% from "gdg-article/account/macro/bootstrap_account_form.html" import render_field %}
+                            {% for field in form if field.widget.input_type != 'hidden' %}
+                                {{ render_field(field, class="validate") }}
+                            {% endfor %}
+
+                            <button type="submit" class="btn btn-default">회원가입</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </article>
