--- a/gdg_flask/templates/gdg-article/account/macro/bootstrap_account_form.html
+++ b/gdg_flask/templates/gdg-article/account/macro/bootstrap_account_form.html
@@ -1,15 +1,38 @@
 {% macro render_field(field, catch_kwargs=true) %}
-    <div class="input-field col s12">
-        {{ field(**kwargs) }}
-        <div id="is_valid_{{ field.name }}">
-            {% if field.errors %}
-
-                {% for error in field.errors %}
-                    <div class="warning">{{ error }}</div>
-                {% endfor %}
-            {% endif %}
+    <div class="form-group has-success has-feedback">
+        {{ field.label(for=field.id,class="col-sm-2 col-lg-offset-1 control-label") }}
+        <div class="col-sm-6">
+            {{ field(class="form-control") }}
         </div>
-        {{ field.label(for=field.id) }}
     </div>
+
 {% endmacro %}
 
+<form class="form-horizontal">
+    <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Remember me
+                </label>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Sign in</button>
+        </div>
+    </div>
+</form>
