--- a/gdg_flask/templates/gdg-article/account/macro/bootstrap_account_form.html
+++ b/gdg_flask/templates/gdg-article/account/macro/bootstrap_account_form.html
@@ -1,9 +1,28 @@
 {% macro render_field(field, catch_kwargs=true) %}
-    <div class="form-group has-success has-feedback">
+    <div class="form-group has-feedback">
         {{ field.label(for=field.id,class="col-sm-2 col-lg-offset-1 control-label") }}
         <div class="col-sm-6">
             {{ field(class="form-control") }}
+            {#            {% if field.errors %}#}
+            {#                <div>#}
+            {#                    <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>#}
+            {#                    <span class="sr-only">(error)</span>#}
+            {#                </div>#}
+            {#            {% else %}#}
+            {#                <div>#}
+            {#                    <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>#}
+            {#                    <span class="sr-only">(success)</span>#}
+            {#                </div>#}
+            {#            {% endif %}#}
+
         </div>
+
+        {% if field.errors %}
+
+            {% for error in field.errors %}
+                <div class="warning">{{ error }}</div>
+            {% endfor %}
+        {% endif %}
     </div>
 
 {% endmacro %}
