--- a/gdg_flask/templates/gdg-article/included/nav_contents.html
+++ b/gdg_flask/templates/gdg-article/included/nav_contents.html
@@ -14,7 +14,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{{ url_for('about_intro') }}">GDG소개 및 역사</a></li>
+                        <li><a href="{{ url_for('about_intro') }}">GDG소개 및 역사</a></li>
                         <li><a href="{{ url_for('about_members') }}">GDG맴버소개</a></li>
                         <li><a href="{{ url_for('about_activities') }}">동아리활동 및 사진</a></li>
                         <li><a href="{{ url_for('about_recruits') }}">신입홍보 및 지원</a></li>
