디폴트 이미지 받아가세요~

--- a/gdg_flask/static/css/gdg-article.css
+++ b/gdg_flask/static/css/gdg-article.css
@@ -14,3 +14,9 @@ div.divider{
 .form-content{
     margin:20px auto;
 }
+
+/* members css begin */
+.members-header .header-image{
+    width: 100%;
+    height: 400px;
+}
