맴버스 추가 정보 보기 스켈레톤 완성했습니다

--- a/gdg_flask/static/css/gdg-article.css
+++ b/gdg_flask/static/css/gdg-article.css
@@ -44,6 +44,9 @@ div.divider{
     padding-top: 20px;
 
 }
+.members-row-developer .panel, .members-row-developer .panel-heading{
+    background: none;
+}
 /**
     members css end - by Junsu
 */
