members extension border 도 none로 내렷습니다

--- a/gdg_flask/static/css/gdg-article.css
+++ b/gdg_flask/static/css/gdg-article.css
@@ -46,6 +46,7 @@ div.divider{
 }
 .members-row-developer .panel, .members-row-developer .panel-heading{
     background: none;
+    border: none;
 }
 /**
     members css end - by Junsu
