--- a/gdg_flask/templates/gdg-article/about/members.html
+++ b/gdg_flask/templates/gdg-article/about/members.html
@@ -63,7 +63,7 @@
                     vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
                     cursus magna.</p>
                 <div class="panel panel-default ">
-                    <div class="panel-heading" role="tab" id="headingOne">
+                    <div role="tab" id="headingOne">
                         <a class="btn btn-default" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" >View details »</a>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
