--- a/gdg_flask/templates/gdg-article/included/nav_contents.html
+++ b/gdg_flask/templates/gdg-article/included/nav_contents.html
@@ -10,7 +10,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand gdg-navbar-brand" href="#"><img src="{{ url_for('static',filename="images/GDG-SSU-white.png") }}"></a>
+                    <a class="navbar-brand gdg-navbar-brand" href="{{ url_for('home') }}"><img src="{{ url_for('static',filename="images/GDG-SSU-white.png") }}"></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                     <ul class="nav navbar-nav">
