members - 아이디 값에 따라 view_detail 에서 해당 위치의 div가 열리도록 만들었습니다.

--- a/gdg_flask/static/css/gdg-article.css
+++ b/gdg_flask/static/css/gdg-article.css
@@ -44,7 +44,9 @@ div.divider{
     padding-top: 20px;
 
 }
-.members-row-developer .panel, .members-row-developer .panel-heading{
+.members-row-designer .panel, .members-row-designer .panel-heading,
+.members-row-planner .panel, .members-row-planner .panel-heading,
+.members-row-developer .panel, .members-row-developer .panel-heading {
     background: none;
     border: none;
 }
