members - 등록하기 진행 할 수 있습니다.

--- a/gdg_flask/static/css/gdg-article.css
+++ b/gdg_flask/static/css/gdg-article.css
@@ -32,16 +32,22 @@ div.divider{
 .members-row-developer{
     background-image: url("/static/images/default-members-developer.gif");
     padding-top: 20px;
+    border-radius: 40px;
+    margin: 2px 0px;
 
 }
 .members-row-designer{
     background-image: url("/static/images/default-members-designer.gif");
     padding-top: 20px;
+    border-radius: 40px;
+    margin: 2px 0px;
 
 }
 .members-row-planner{
     background-image: url("/static/images/default-members-planner.jpg");
     padding-top: 20px;
+    border-radius: 40px;
+    margin: 2px 0px;
 
 }
 .members-row-designer .panel, .members-row-designer .panel-heading,
