--- a/gdg_flask/templates/gdg-article/about/members.html
+++ b/gdg_flask/templates/gdg-article/about/members.html
@@ -61,7 +61,7 @@
                              alt="Generic placeholder image" width="140" height="140">
                     </div>
                     <div class="col-lg-8">
-                        <h2>디자이너 소개 자리{{ 'count = '+item['count'] }}</h2>
+                        <h2>개발자 소개 자리{{ 'count = '+item['count'] }}</h2>
                         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
                             vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
                             cursus magna.</p>
@@ -131,40 +131,13 @@
 
 
         {% endfor %}
+    </div>
+{
+    <hr class="featurette-divider">
+    <div>
+        <div class="members-label"><h2>맴버소개 등록하기</h2></div>
 
-
-
-        <div class="row members-row-designer">
-            <div class="col-lg-4">
-                <img class="img-circle"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                     alt="Generic placeholder image" width="140" height="140">
-            </div>
-            <div class="col-lg-8">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-                    cursus magna.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-            </div>
-
-        </div>
-        <div class="row members-row-planner">
-            <div class="col-lg-4">
-                <img class="img-circle"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                     alt="Generic placeholder image" width="140" height="140">
-            </div>
-            <div class="col-lg-8">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-                    cursus magna.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-            </div>
-
-        </div>
-        </div>
+    </div>
 
 
         <!-- START THE FEATURETTES -->
