--- a/gdg_flask/templates/gdg-article/included/nav_contents.html
+++ b/gdg_flask/templates/gdg-article/included/nav_contents.html
@@ -18,7 +18,6 @@
                         <li><a href="{{ url_for('about_members') }}">GDG맴버소개</a></li>
                         <li><a href="{{ url_for('about_activities') }}">동아리활동 및 사진</a></li>
                         <li><a href="{{ url_for('about_recruits') }}">신입홍보 및 지원</a></li>
-
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">확장페이지<span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -31,6 +30,9 @@
                                 <li><a href="#">One more separated link</a></li>
                             </ul>
                         </li>
+                        <li><a href="{{ url_for('account_register') }}">회원가입</a></li>
+                        <li><a href="{{ url_for('account_login') }}">로그인</a></li>
+
                     </ul>
                 </div>
             </div>
