--- a/gdg_flask/templates/gdg-article/account/login.html
+++ b/gdg_flask/templates/gdg-article/account/login.html
@@ -1,10 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "gdg-base/layout.html" %}
+{% block article %}
+    <article class="gdg-article-base-wrap">
+        <div class="gdg-contents-base-wrap">
+            <div class="container">
+                <div class="form-box">
+                    <form role="form" method="post" class="form-horizontal">
 
-</body>
-</html>
+                        <!-- Form header for form title-->
+                        <div class="form-header">
+                            <h4>회원가입</h4>
+                        </div>
+
+                        <div role="separator" class="divider"></div>
+
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                            {% if messages %}
+                                <div class="flash-wrap">
+                                {% for category, message in messages %}
+                                    <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                        {{ message }}
+                                    </div>
+                                {% endfor %}
+                                </div>
+                            {% endif %}
+                        {% endwith %}
+                        <div class="form-content">
+                            <!--csrf token-->
+                            {{ form.hidden_tag() }}
+
+                            {% from "gdg-article/account/macro/bootstrap_account_form.html" import render_field %}
+                            {% for field in form if field.widget.input_type != 'hidden' %}
+                                {{ render_field(field) }}
+                            {% endfor %}
+
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-lg-offset-3 col-sm-10">
+                                    <button type="submit" class="btn btn-default">회원가입</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </article>
+{% endblock %}
