--- a/gdg_flask/templates/gdg-article/account/login.html
+++ b/gdg_flask/templates/gdg-article/account/login.html
@@ -36,7 +36,7 @@
 
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-lg-offset-3 col-sm-10">
-                                    <button type="submit" class="btn btn-default">회원가입</button>
+                                    <button type="submit" class="btn btn-default">로그인</button>
                                 </div>
                             </div>
 
