gdg-article.css - intro에 관한 css 수정 intro-background.png - 그림 좌우반전 intro.html - 우측에 버튼을 추가하고 버튼에 마우스를 올리면 좌측 그림이 바뀌도록 해봤습니다.

--- a/gdg_flask/templates/gdg-article/about/intro.html
+++ b/gdg_flask/templates/gdg-article/about/intro.html
@@ -3,18 +3,26 @@
     <div class="members-header">
         <img class="header-image" src="{{ url_for('static',filename="images/default-header-img.jpg") }}" alt="">
     </div>
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="intro-header">GDG SSU?
-                <div class="intro-invite">
-                    <div class="intro-image">
-                        <p class="intro-contents">소개내용</p>
-                    </div>
+    <div class="container">
+        <div class="intro-header-text" style="margin-left:80px">GDG SSU?</div>
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="intro-invite-frame">
+                    <img src = "/static/images/intro-background.png" name="aaa">
+                    <!--<div class="intro-image">
+                        <p class="intro-contents-text">소개내용</p>
+                    </div>-->
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 intro-history">
-            history
+            <div class="col-lg-4" style="margin:auto">
+                <div class="intro-buttons-frame" >
+                    <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/intro-background.png'">GDG SSU?</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/GDG-SSU-black.png'">history</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button">news</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button">etc1</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button">etc2</button>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
