--- a/gdg_flask/static/css/gdg-article.css
+++ b/gdg_flask/static/css/gdg-article.css
@@ -62,29 +62,32 @@ div.divider{
 
 
 /*intro css begin*/
-.intro-header{
+.intro-header-text{
     /*margin-left:120px;*/
     font-size:50px;
     color:darkgreen;
 }
-.intro-invite{
+.intro-invite-frame{
     border:1px solid #cccccc;
-    height:800px;
-    width:800px;
+    width:80%;
+    margin: auto;
+    /*height:400px;*/
 }
-.intro-image{
-    background-image: url("/static/images/intro-background.png") ;
-    width:798px;
-    height:400px;
+.intro-image {
+    background-image: url("/static/images/intro-background.png");
+    width: 100%;
+    height: 300px;
 }
-.intro-contents{
+.intro-contents-text{
     padding: 100px 0 0 50px;
     font-size:20px;
     color: white;
 }
-.intro-history{
-    /*margin-left:920px;*/
-    border:1px solid #777777;
-    width:50px;
-    height:50px;
+.intro-buttons-frame{
+    margin: auto;
+}
+.intro-button{
+    margin: 0 10px 10px 0 ;
+    width:140px;
+    height:140px;
 }
