참고용 템플릿 삭제 및 라이센스 총정리

--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/base/base.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/base/base.html
@@ -52,10 +52,11 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js')}}"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('recruits_201601.static', filename='js/SmoothScroll.js') }}"></script>
 
 <script type="text/javascript" src="{{ url_for('recruits_201601.static', filename='js/wow.min.js') }}"></script>
-{#<script type="text/javascript" src="{{ url_for('static', filename='bower_components/jquery-preetyPhoto/js/jquery-prettyPhoto.js') }}"></script>#}
-{#<script type="text/javascript" src="{{ url_for('static', filename='recruits_2016_1/jquery.isotope.js') }}"></script>#}
+<script type="text/javascript" src="{{ url_for('recruits_201601.static', filename='js/jquery.prettyPhoto.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('recruits_201601.static', filename='js/jquery.isotope.js') }}"></script>
 {#<script type="text/javascript" src="js/jquery.isotope.js"></script>#}
 
 <script type="text/javascript" src="{{ url_for('recruits_201601.static', filename='owl-carousel/owl.carousel.js') }}"></script>
