로고 추가. (작년도 svg파일 연결)

--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/nav.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/nav.html
@@ -1,4 +1,3 @@
-
 <!-- Navigation
     ==========================================-->
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
@@ -6,13 +5,17 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand" href="../index.html"><i class="fa fa-flag-checkered fa-flip-horizontal"></i> Tempo<strong></strong></a> </div>
+            <a class="navbar-brand" href="{{ url_for('recruits_201601.recruit_index') }}">
+{#                <i class="fa fa-flag-checkered fa-flip-horizontal"></i> Tempo<strong></strong>#}
+                <div class="logo logo-light"></div>
+            </a>
+        </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#home" class="page-scroll">Home</a></li>
-                <li><a href="#services-section" class="page-scroll">Services</a></li>
+                <li><a href="#services-section" class="page-scroll">동아리 소개</a></li>
                 <li><a href="#works-section" class="page-scroll">Portfolio</a></li>
                 <li><a href="#about-section" class="page-scroll">About</a></li>
                 <li><a href="#team-section" class="page-scroll">Team</a></li>
