--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/base/base.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/base/base.html
@@ -30,7 +30,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
-
+    <link rel="stylesheet" href="{{ url_for('recruits_201601.static', filename='css/gdg-ssu.css') }}">
     {#    보류#}
     <script type="text/javascript" src="{{ url_for('recruits_201601.static',filename='js/modernizr.custom.js') }}"></script>
     {#<script type="text/javascript" src="js/modernizr.custom.js"></script>#}
